# fisica-paper

./: README.md  pyproject.toml
notebooks/: 01_portas_quanticas.ipynb
