[tool.poetry]
name = "fisica-paper"
version = "0.1.0"
description = ""
authors = ["Marcus Freire <marcus.elias@ufba.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
qiskit = "0.46.2"
matplotlib = "3.9.2"
notebook = "^7.2.2"
qiskit-aer = "0.14.2"
pylatexenc = "2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
